1) FamilyComponent assignment with solution     2)  the children prop

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </body>
 </html>
 
------------ this children prop-----
+----------- the children prop-----
 <!DOCTYPE html>
 <html lang="en">
   <head>
